# pcce-tides

./: .gitignore  pyproject.toml
data/: ul-boia-completo.csv  vl-boia-completo.csv
figs/: .gitignore
scripts/: T_tide.ipynb  plot_tide_variance_on_currents.ipynb
scripts/.ipynb_checkpoints/: T_tide-checkpoint.ipynb
